# IEOM

./: .dockerignore  .gitignore  .mlintrc  Dockerfile  FEATURE_VALIDATION_MATRIX.md  MATLAB_CLI_INTEGRATION_REPORT.md  MATLAB_IMPLEMENTATION_GUIDE.md  MATLAB_TEAM_SUMMARY.md  PROGRAM_OVERVIEW.md  README.md  RESEARCH_PAPER.md  baseline_handoff_simulation_integrated.m  matlab_ab_expected_check.m  matlab_ab_policy_smoke.m  matlab_baseline_expected_check.m  matlab_run_ab_policy_benchmark.m  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  run_ab_scenarios.m  test_matlab_cli_integration.m  test_matlab_integration.m
.venv-test/: pyvenv.cfg
Downloads/: index.html
archive/: ieom_plan_tracking.db  ieom_plan_tracking.sql
configs/: base.yaml
docs/: QUICK_REFERENCE_MATLAB.md  matlab_ab_milestone1.md  paper_ready_benchmark.md  simulink_stage1_ab_simulation.md  simulink_stage2.md  simulink_stage3.md
scripts/: analyze_handoff_baseline.py  generate_canonical_figures.py  generate_paper_benchmark_inputs.py  generate_synthetic_dataset.py  inspect_sample.py  phase2_cli.py  phase3_verify_outputs.py  real_dataset_onboarding.py  run_baseline.py  run_full_paper_pipeline.py  scrape_handoff_baseline_data.py  simulink_stage3_predict.py
simulations/: baseline_handoff_log.txt  baseline_handoff_simulation.m  baseline_handoff_simulation_octave.m  classical_model.json  classical_model_precision.json  find_hard_seeds.m  generate_canonical_results.m  generate_figures_from_csv.m  infer_classical.m  matlab_python_bridge_smoke.m  matlab_run_ab_policy_benchmark.m  octave_canonical_benchmark.m  (+12 more)
(+434 files in other folders)
